--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "pybind11~=2.6.2"]
+requires = [
+    "setuptools>=42",
+    "wheel",
+    "pybind11>=2.6.0",
+]
+
 build-backend = "setuptools.build_meta"
